src/test/ui/parser/qualified-path-in-turbofish.stderr
error: found single colon where type path was expected
  --> $DIR/qualified-path-in-turbofish.rs:17:27
   |
LL |     template::<<Impl as T>:Ty>();
   |                           ^ help: use double colon: `::`

error: aborting due to previous error

